--- a/src/app/components/appointments/appointments.component.html
+++ b/src/app/components/appointments/appointments.component.html
@@ -1,6 +1,6 @@
 <!-- Appointments Component -->
 <div class="appointments-container">
-  <app-navbar></app-navbar>
+  <!-- <app-navbar></app-navbar> -->
   <!-- Loading State -->
   <div *ngIf="loading" class="loading-state">
     <div class="spinner"></div>
@@ -331,6 +331,7 @@
       </div>
     </div>
   </div>
+</div>
 </div>
 
 <!-- Appointment Modal -->
