--- a/src/app/components/clients/clients.component.html
+++ b/src/app/components/clients/clients.component.html
@@ -1,5 +1,5 @@
 <div class="clients-container">
-  <app-navbar></app-navbar>
+  <!-- <app-navbar></app-navbar> -->
   
   <!-- Loading Overlay -->
   <div class="loading-overlay" *ngIf="loading">
@@ -268,7 +268,7 @@
         </div>
         
         <div class="form-group">
-          <label for="insuranceType">Insurance Type *</label>
+          <label for="insuranceType">Insurance Type Most likely *</label>
           <select id="insuranceType" formControlName="insuranceType" class="form-control" [disabled]="loading">
             <option value="">Select Insurance Type</option>
             <option *ngFor="let type of insuranceTypes" [value]="type">{{ type }}</option>
@@ -372,7 +372,7 @@
               <span>{{ calculateAge(selectedClient.dateOfBirth) }} years</span>
             </div>
             <div class="detail-item">
-              <label>Insurance Type:</label>
+              <label>Insurance Type Most Likely:</label>
               <span>{{ selectedClient.insuranceType }}</span>
             </div>
           </div>
@@ -423,10 +423,11 @@
           <i class="fas fa-edit"></i>
           Edit Client
         </button>
-        <button class="btn btn-primary">
-          <i class="fas fa-calendar"></i>
-          Schedule Appointment
-        </button>
+<div *ngFor="let client of clients">
+ 
+</div>
+
+
       </div>
     </div>
   </div>
