--- a/src/app/components/reminders/reminders.component.html
+++ b/src/app/components/reminders/reminders.component.html
@@ -1,5 +1,5 @@
 <!-- app-navbar is imported as shared component -->
-<app-navbar></app-navbar>
+<!-- <app-navbar></app-navbar> -->
 
 <div class="reminders-container">
   <!-- Header Section -->
